Making overflow behavior automatic to avoid displaying an unneeded scrollbar when all content fits without scrolling

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -458,7 +458,7 @@ div.menubox{
   left: 0;
   right: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: .5em;
 }
 
